FINISHED JaCoCo Initial Setting